# nsight-graphics-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: CAPTURE_FORMAT.md  NSIGHT_SHADER_DEBUG_AUTONOMY.md  RPC_PROTOCOL.md
examples/: 01_environment_and_sdk.py  02_capture_and_index.py  03_gpu_trace_headless.py  04_resource_query.py
src/nsight_graphics_mcp/: __init__.py  __main__.py  autonomous_shader_fix.py  capture_decoder.py  capture_diff.py  capture_format.py  capture_info.py  captures.py  cli.py  config.py  cpp_bridge_re.py  cpp_capture.py  cpp_capture_parser.py  deep_capture.py  doctor.py  etw_capture.py  events.py  eye_issue.py  frame_costs.py  frame_debugger_rpc.py  gputrace.py  handle_resolver.py  ida_re.py  layers.py  objects.py  pe_patch_planner.py  project.py  proto_descriptors.py  proto_schemas.py  pso_resolver.py  redist.py  rpc_client.py  rpc_trace.py  sdk.py  server.py  session.py  shader_debug.py  shader_triage.py  shaders.py  ui.py  (+1 more)
tests/: test_autonomous_shader_fix.py  test_capture_decoder.py  test_capture_diff.py  test_cpp_bridge_re.py  test_cpp_capture_parser.py  test_deep_capture.py  test_etw_capture.py  test_eye_issue.py  test_frame_costs.py  test_gputrace.py  test_handle_resolver.py  test_ida_re.py  test_pe_patch_planner.py  test_proto_descriptors.py  test_pso_resolver.py  test_rpc_client.py  test_rpc_trace.py  test_shader_debug.py  test_shader_triage.py  test_smoke.py
tools/: dbgview_capture.py  frida_rpc_sniff.py  ida_export_facts.py  ida_fog_decompile.py  ida_xrefs_and_filter.py  rpc_sweep.py
