[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nsight-graphics-mcp"
version = "0.1.0"
description = "MCP server for NVIDIA Nsight Graphics (ngfx.exe / ngfx-capture / ngfx-replay / ngfx-rpc / NGFX SDK) — launch, attach, capture, GPU Trace, Generate C++ Capture, replay, and analyze NVIDIA GPU captures."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nsight-graphics-mcp" }]
keywords = [
    "mcp",
    "nsight",
    "nsight-graphics",
    "nvidia",
    "d3d12",
    "vulkan",
    "directx",
    "gpu",
    "profiling",
    "gpu-trace",
    "graphics-capture",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.0",
    "psutil>=5.9",
    "protobuf>=4.21",
    "lz4>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.5",
]

[project.scripts]
nsight-graphics-mcp = "nsight_graphics_mcp.__main__:main"
ngfx-mcp = "nsight_graphics_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/nsight-graphics-mcp"
Issues = "https://github.com/your-org/nsight-graphics-mcp/issues"
"NVIDIA Nsight Graphics" = "https://developer.nvidia.com/nsight-graphics"
"Nsight Graphics User Guide" = "https://docs.nvidia.com/nsight-graphics/UserGuide/index.html"

[tool.hatch.build.targets.wheel]
packages = ["src/nsight_graphics_mcp"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
